Visualisation des cours + Dashboard pour prof

--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
@@ -1,11 +1,12 @@
-<h1>Bonjour {{name}} 👋</h1>
+<h1>Bonjour {{username}} 👋</h1>
 
 <div class="dashboard-home p-flex">
 
     <div class="dashboard">
 
         <div class="dashboard-values p-flex">
-            <p-card class="card-item" header="Absences">
+
+            <p-card class="card-item" header="Absences" *ngIf="role==='étudiant'">
                 <p class="m-0 ">Injustifiées: {{nbAbsences}} </p>
             </p-card>
     
@@ -14,12 +15,12 @@
             </p-card>
 
             <p-card class="card-item" header="Cours">
-                <p class="m-0">Cette semaine : X </p>
+                <p class="m-0">Cette semaine : {{nbCoursesThisWeek}} </p>
             </p-card>
         </div>
 
         <div class="dashboard-values p-flex">
-            <p-panel>
+            <p-panel *ngIf="role==='étudiant'">
                 <p-header>
                     <i class="pi pi-user-minus" style="color: red"></i>
                     Absences Injustifiées ({{nbAbsences}})
@@ -55,12 +56,47 @@
         
         
         
-    </div>
+    </div> 
+    
+    <p-panel header="Emploi du temps">
+        <div >
+
+            <div class="cal-header flex align-items-center justify-content-between">
+                <div>
+                    <p-button [rounded]=" true" [text]="true" (click)="previous()" icon="pi pi-chevron-left"
+                        [outlined]="true"></p-button>
+                </div>
+                <div class="period-text">
+                    <span>{{ viewDate | date : "EEEE d MMMM y" }}</span>
+                </div>
+                <div>
+                    <p-button [rounded]="true" [text]="true" (click)="next()" icon="pi pi-chevron-right"
+                        [outlined]="true"></p-button>
+                </div>
+            </div>
+    
+
+            <mwl-calendar-day-view [viewDate]="viewDate" [events]="events" [dayStartHour]="dayStartHour"
+                [dayEndHour]="dayEndHour" [hourSegments]="hourSegments" [eventTitleTemplate]="customEventTitleTemplate"
+                (eventClicked)="handleEventClick($event.event)">
+            </mwl-calendar-day-view>
+        </div>
+    </p-panel>
+   
+    <ng-template class="custom-event-title" #customEventTitleTemplate let-event="event">
+        <span class="custom-event-title__resource">{{
+            event.meta.resourceName
+            }}</span>
+        <span class="custom-event-title__teachers">{{
+            event.meta.teacherNames
+            }}</span>
+        <span class="custom-event-title__classroom">{{
+            event.meta.classroomName
+            }}</span>
+        <span class="custom-event-title__groupname">{{ event.meta.groupName }}</span>
+        <!-- Ajout du groupName -->
+    </ng-template>
+
 
     
-    <p-panel header="Journée EDT">
-        <p>Ici sera affichée la journée de cours de l'user</p>
-    </p-panel>    
-    
-    
-</div>
+</div> 
