--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -1,4 +1,4 @@
-<div class="app-layout">
+<!-- <div class="app-layout">
   <div class="calendar-section">
     <div class="dropdown-section">
       <div class="flex gap-3">
@@ -84,3 +84,4 @@
     event.meta.classroomName
   }}</span>
 </ng-template>
+ -->
