--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
@@ -92,3 +92,61 @@ p-header {
 .resource-name {
     font-weight: bold;
 }
+
+/*-----*/
+
+
+::ng-deep mwl-calendar-event-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    color: black; /* Texte en noir */
+    padding: 4px; /* Espacement autour du contenu */
+    width: 100%;
+  }
+  
+  .custom-event-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px;
+  }
+  
+  .custom-event-title__resource {
+    font-weight: bold;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .custom-event-title__teachers,
+  .custom-event-title__classroom,
+  .custom-event-title__groupname {
+    font-size: 14px;
+  }
+  
+  .custom-event-title__classroom {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .custom-event-title__teachers {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+  
+  .custom-event-title__groupname {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
