--- a/src/app/teacher/components/callroll/callroll.component.html
+++ b/src/app/teacher/components/callroll/callroll.component.html
@@ -1,5 +1,6 @@
 <div class="flex gap-5">
-    <div style="width:30%">
+    <div style="width:30%; min-width: 300px; padding-bottom: 10px; padding-right: 10px; padding-left: 10px; padding-top: 10px;"
+        class="border-round shadow-1">
         <div class="cal-header flex align-items-center justify-content-between">
             <div>
                 <p-button [rounded]=" true" [text]="true" (click)="previous()" icon="pi pi-chevron-left"
@@ -20,8 +21,53 @@
         </mwl-calendar-day-view>
     </div>
 
-    <div style="width: 100%">
+    <div style="width: 100%" class="callView">
+        <div *ngIf="selectedEventDetails">
+            <!--<h3>Détails de l'Événement :</h3>
+            <p>ID du Groupe : {{ selectedEventDetails.groupId }}</p>
+            <p>Type de Groupe : {{ selectedEventDetails.groupType }}</p>
+            <p>Nom du Groupe : {{ selectedEventDetails.groupName }}</p>
+            <p>Nom de la Ressource : {{ selectedEventDetails.resourceName }}</p>-->
 
+            <h3 class="mb-5">Appel du {{ viewDate | date: "EEEE d MMMM y" }} pour le cours de
+                {{ selectedEventDetails.course.courses.startTime | formatHour }} à
+                {{ selectedEventDetails.course.courses.endTime | formatHour }}
+            </h3>
+
+            <div class="border-round shadow-1">
+                <p-table class="studentTable" [value]="students" [tableStyle]="{ 'min-width': '50rem' }"
+                    (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
+                    [(selection)]="selectedStudents">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>{{ students.length }} étudiants</th>
+                            <th>Absence</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-student>
+                        <tr>
+                            <td>{{student.first_name}} {{student.last_name}}</td>
+                            <td>
+                                <p-tableCheckbox [value]="student"></p-tableCheckbox>
+                            </td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="7">Aucun étudiant.</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+
+            <div style="width: 100%; background-color: #f8f9fa; padding: 10px" class="mt-5 border-round shadow-1">
+                <div class="flex gap-5 align-items-center">
+                    <p-checkbox [binary]="true" class="endCallCheckbox" label="Appel terminé"
+                        [(ngModel)]="endCallChecked"></p-checkbox>
+                    <span>{{ students.length - selectedStudentIds.length }} étudiants présents dans la salle</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
