ajout de la vue jour dans l'edt

--- a/src/app/timetable/components/timetable-layout/timetable-layout.component.scss
+++ b/src/app/timetable/components/timetable-layout/timetable-layout.component.scss
@@ -178,3 +178,78 @@
   padding: 2px;
   text-align: right;
 }
+
+/* Style pour le conteneur principal */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+/* Style pour les boutons Précédent et Suivant */
+.header-container .button-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-container .button-container p-button {
+  margin: 0 10px;
+}
+
+/* Style pour le texte de la période de la semaine ou de l'en-tête du jour */
+.header-container .period-text {
+  flex-grow: 1; /* Pour occuper tout l'espace restant */
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
+/* Style de base pour le dayHeader */
+.day-header {
+  cursor: pointer; /* Définissez le curseur sur pointer pour montrer qu'il est cliquable */
+  transition: background-color 0.3s ease; /* Ajoutez une transition pour l'effet de survol */
+  padding: 10px;
+  background-color: #f0f0f0; /* Couleur de fond de base */
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+/* Style au survol de la souris */
+.day-header:hover {
+  background-color: #e0e0e0; /* Changez la couleur d'arrière-plan au survol */
+}
+
+/* Style au survol de la souris */
+.day-header:hover span {
+  color: rgba(15, 15, 186, 0.746); /* Changez la couleur du texte au survol */
+}
+
+/* Style pour les boutons Précédent et Suivant */
+.day-header .button-container {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.day-header .button-container p-button {
+  margin: 0 5px;
+}
+
+/* Style pour le texte de la période de la journée */
+.day-header .period-text {
+  flex-grow: 1; /* Pour occuper tout l'espace restant */
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* CSS pour les boutons Copier et Coller */
+.button-container {
+  display: inline-block;
+  margin-right: 10px; /* Espacement entre les boutons */
+}
