--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
@@ -95,7 +95,6 @@ p-header {
 
 /*-----*/
 
-
 ::ng-deep mwl-calendar-event-title {
     display: flex;
     flex-direction: column;
@@ -106,47 +105,27 @@ p-header {
     width: 100%;
   }
   
-  .custom-event-title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 5px;
+  .custom-event-title__classroom {
+    order: 1; /* En haut */
+    padding: 2px;
+    text-align: left;
   }
   
   .custom-event-title__resource {
-    font-weight: bold;
-    font-size: 16px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .custom-event-title__teachers,
-  .custom-event-title__classroom,
-  .custom-event-title__groupname {
-    font-size: 14px;
-  }
-  
-  .custom-event-title__classroom {
-    position: absolute;
-    top: 0;
-    left: 0;
+    order: 2; /* Au milieu */
+    padding: 2px;
+    text-align: center;
   }
   
   .custom-event-title__teachers {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    order: 3; /* En bas */
+    padding: 2px;
+    text-align: left;
   }
   
   .custom-event-title__groupname {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    order: 4; /* Ajouté */
+    padding: 2px;
+    text-align: right;
   }
+  
