--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -82,38 +82,11 @@
                   </a>
                   <ul
                     class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
-                    <li>
-                      <a pRipple
-                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                        pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
-                        leaveActiveClass="slideup">
-                        <i class="pi pi-chart-line mr-2"></i>
-                        <span class="font-medium text-sm">Mes services</span>
-                        <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
-                      </a>
-                      <ul
-                        class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
-                        <li>
-                          <a pRipple
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
-                            <i class="pi pi-table mr-2"></i>
-                            <span class="font-medium text-sm">View</span>
-                          </a>
-                        </li>
-                        <li>
-                          <a pRipple
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
-                            <i class="pi pi-search mr-2"></i>
-                            <span class="font-medium text-sm">Search</span>
-                          </a>
-                        </li>
-                      </ul>
-                    </li>
                     <li routerLink="/statistics">
-                      <a pRipple
-                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
-                        <i class="pi pi-chart-line mr-2"></i>
-                        <span class="font-medium text-sm">Statistiques</span>
+                      <a pRipple routerLinkActive="active-navlink"
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                        <i class="pi pi-chart-line mr-2" routerLinkActive="active-navlink"></i>
+                        <span class="font-medium text-sm" routerLinkActive="active-navlink">Statistiques</span>
                       </a>
                     </li>
                   </ul>
@@ -126,12 +99,12 @@
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Emploi du temps</span>
                   </a>
                 </li>
-                <li>
+                <li routerLink="/teacher/callroll">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
                     <i class="pi pi-user-minus mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Vie scolaire</span>
+                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Appel et suivi</span>
                   </a>
                 </li>
                 <li routerLink="/reminders">
