--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
@@ -95,7 +95,92 @@ p-header {
 
 /*-----*/
 
-::ng-deep mwl-calendar-event-title {
+.calendar-section {
+    flex: 3; /* ou utilisez flex: 3 pour donner plus d'espace au calendrier */
+  }
+  
+  .menu-section {
+    flex: 1;
+    padding-left: 20px; /* Espace entre le calendrier et le menu */
+  }
+  
+  .cal-day-view {
+    width: 100%;
+    height: 100vh;
+  }
+  
+  /* Ajoutez ici des styles personnalisés pour le calendrier */
+  /* manage-courses.component.scss */
+  .cal-time-events {
+    min-height: 1000px; // Réglable en fonction de vos besoins
+  }
+  
+  .cal-hour-segment {
+    height: 30px; // Hauteur pour un segment de 30 minutes
+  }
+  
+  ::ng-deep .cal-week-view .cal-time-events .cal-event {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .custom-event-title {
+    font-weight: bold;
+  }
+  
+  .custom-event-time {
+    display: block; /* ou 'inline' selon la disposition souhaitée */
+  }
+  
+  /* manage-courses.component.scss */
+  
+  .custom-event-title {
+    display: block; /* Make each span a block element to appear on a new line */
+  
+    &__resource,
+    &__teachers,
+    &__classroom {
+      font-size: 10px;
+    }
+  }
+  
+  ::ng-deep .cal-week-view .cal-time {
+    font-weight: 100 !important;
+  }
+  
+  ::ng-deep .cal-week-view {
+    background: rgb(255, 255, 255) !important;
+  }
+  
+  ::ng-deep .cal-week-view .cal-day-headers {
+    border-top-left-radius: 5px !important;
+    // border-top-right-radius: 5px !important;
+    border: none !important;
+    border-bottom: 1px solid rgb(221, 221, 221) !important;
+  }
+  
+  ::ng-deep .cal-week-view {
+    border: none !important;
+  }
+  
+  ::ng-deep .cal-week-view .cal-day-headers .cal-header:last-child {
+    // border-top-right-radius: 5px !important;
+  }
+  
+  ::ng-deep .cal-week-view .cal-time-events {
+    border: none;
+  }
+  
+  ::ng-deep .cal-week-view .cal-header.cal-today {
+    background-color: rgb(239, 244, 255);
+  }
+  
+  ::ng-deep .cal-week-view .cal-hour:not(:last-child) .cal-hour-segment,
+  .cal-week-view .cal-hour:last-child :not(:last-child) .cal-hour-segment {
+    border-bottom: none;
+  }
+  
+  ::ng-deep mwl-calendar-event-title {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -105,27 +190,74 @@ p-header {
     width: 100%;
   }
   
-  .custom-event-title__classroom {
-    order: 1; /* En haut */
-    padding: 2px;
-    text-align: left;
+  ::ng-deep .cal-event {
+    border: none !important;
+    opacity: 0.8 !important;
+    transition: 0.2s;
+    margin: 0 !important;
+    line-height: 20px !important;
+  }
+  
+  ::ng-deep .cal-event:hover {
+    opacity: 1 !important;
+  }
+  
+  ::ng-deep .cal-week-view .cal-time-events .cal-event {
+    width: calc(100% - 10px) !important;
+  }
+  
+  .custom-event-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px;
   }
   
   .custom-event-title__resource {
-    order: 2; /* Au milieu */
-    padding: 2px;
-    text-align: center;
+    font-weight: bold;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .custom-event-title__teachers,
+  .custom-event-title__classroom,
+  .custom-event-title__groupname {
+    font-size: 14px;
+  }
+  
+  .custom-event-title__classroom {
+    position: absolute;
+    top: 5px;
+    left: 5px;
   }
   
   .custom-event-title__teachers {
-    order: 3; /* En bas */
-    padding: 2px;
-    text-align: left;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
   }
   
   .custom-event-title__groupname {
-    order: 4; /* Ajouté */
-    padding: 2px;
-    text-align: right;
+    position: absolute;
+    bottom: 5px;
+    right: 16px;
   }
   
+  .custom-event-title__control {
+    font-weight: bold;
+    position: absolute;
+    top: 13px;
+    right: -21px;
+    transform: translate(-50%, -50%);
+    z-index: 2; /* Place "Contrôle" au-dessus de "Ressource Name" */
+    padding: 2px 6px; /* Espacement autour du texte */
+    border-radius: 4px; /* Coins arrondis */
+  }
