--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
@@ -254,10 +254,11 @@ p-header {
   .custom-event-title__control {
     font-weight: bold;
     position: absolute;
-    top: 13px;
-    right: -21px;
+    top: 19px;
+    right: -14px;
     transform: translate(-50%, -50%);
-    z-index: 2; /* Place "Contrôle" au-dessus de "Ressource Name" */
-    padding: 2px 6px; /* Espacement autour du texte */
-    border-radius: 4px; /* Coins arrondis */
+    z-index: 2;
+    padding: 2px 6px;
+    border-radius: 4px;
+    border: 1px solid black;
   }
