--- a/src/app/timetable/components/timetable-layout/timetable-layout.component.html
+++ b/src/app/timetable/components/timetable-layout/timetable-layout.component.html
@@ -14,7 +14,7 @@
           (onChange)="onTeacherChange()"
           [(ngModel)]="selectedTeacherUsername"
           optionLabel="uniqueLabel2"
-          placeholder="Sélectionnez une professeur"
+          placeholder="Sélectionnez un professeur"
         ></p-dropdown>
         <p-dropdown
           [options]="classrooms"
